refactor: change polymer tag model name
