# starrydata/api/urls.py
@@ -7,8 +7,8 @@ urlpatterns = [
     path('figures', views.FigureListView.as_view(), name='figureList'),
     path('samples', views.SampleListView.as_view(), name='sampleList'),
     path('polymer_tags', views.PolymerTagListView.as_view(), name='polyerTagList'),
-    path('polymer_tag_tree_nodes', views.PolymerTagTreeNodeListView.as_view(), name='polyerTagTreeList'),
-    path('polymer_tag_tree_nodes/<int:pk>', views.PolymerTagTreeNodeDetailView.as_view(), name='PolymerTagTreeNodeDetailView'),
+    path('polymer_nodes', views.PolymerNodeListView.as_view(), name='polyerNodeList'),
+    path('polymer_nodes/<int:pk>', views.PolymerNodeDetailView.as_view(), name='PolymerNodeDetailView'),
     path('polymer_tag_tree', views.PolymerTagTreeView.as_view(), name='PolymerTagTreeView'),
     path('fabrication_processes', views.ListView.as_view(), name='processList'),
     path('fabrication_processes/<int:pk>', views.DetailView.as_view(), name='processDetail'),
